# consititutional-ai

./: .gitignore  README.md  constitution.py  fine_tune.py  fine_tune.sh  generate_data.py  job.sh  merge_and_push.sh  pyproject.toml  test.sh  testing.py
jobs/: fine_tune.sh  generate_data.sh  merge_and_push.sh
sft_dataset_local/: data-00000-of-00001.arrow  dataset_info.json  state.json
src/: config.py  constitution.py  fine_tune.py  generate_data.py  judging.py  merge_and_push.py  testing.py
