[project]
name = "consititutional-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "datasets>=4.1.1",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "protobuf>=6.32.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "trl>=0.24.0",
    "wandb>=0.22.2",
]
